@@ -2,6 +2,7 @@
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Implemented feature #13103: Different axes end styles.
+- Implemented feature #13102: Axes not extending beyond zero in line charts
 
 
 1.3 - Monday 16 June 2008
